--- a/css/styles.css
+++ b/css/styles.css
@@ -94,11 +94,16 @@ button {
     display: inline-block;
     font-family: inherit;
     background-color: transparent;
+    border: none;
     border: 1px solid transparent;
 }
 
 address {
     font-style: normal;
+}
+
+image {
+    display: block;
 }
 /* #endregion */
 
@@ -117,7 +122,7 @@ address {
   
 .header-nav {
     display: flex;
-    gap: 76px;
+    align-items: center;
 }
  
 .logo {
@@ -134,6 +139,7 @@ address {
 
 .logo-header {
     color: var(--navy-blue);
+    margin-right: 76px
 }
 
 .header-nav-list,
@@ -167,13 +173,11 @@ address {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding-top: 191px;
-    padding-bottom: 181px;
 }
 
 .hero {
     background: var(--navy-blue);
-
+    padding: 188px 0;
 }
 
 .hero h1 {
@@ -189,6 +193,8 @@ address {
 
 .btn {
     display: inline-block;
+    min-width: 169px;
+    height: 56px;
     background: var(--iris);
     color: var(--white);
     font-size: 16px;
@@ -225,6 +231,10 @@ address {
     flex-direction: column;
 }
 
+.section-list-item h3 {
+    margin-bottom: 8px;
+}
+
 .principles-section .section-title {
     text-align: left;
 }
@@ -233,11 +243,12 @@ address {
 /* #region Team section */
 .team-section {
     background: var(--cloud);
+    padding-top: 120px;
+    padding-bottom: 120px;
 } 
 
 .team-container {
-    padding-top: 120px;
-    padding-bottom: 120px;
+    
 }
 
 .team-list {
@@ -248,7 +259,8 @@ address {
 }
 
 .team-section h2 {
-    padding-bottom: 74px;
+    text-align: center
+    margin-bottom: 74px;
 }
 
 .team-list-item {
@@ -256,36 +268,41 @@ address {
     background: var(--white);
 }
 
+.team-list-item img {
+    border-radius: 0px 0px 4px 4px;
+}
+
+.team-card {
+    padding: 32px 0;
+}
+
 .team-section h3 {
     display: block;
-    justify-content: space-between;
-    align-items: center;
+    text-align: center;
     background: var(--white);
     font-weight: 500;
-    padding-top: 32px;
-    padding-bottom: 4px;
+    margin-bottom: 8px;
 }
 
 .team-section .section-list-item-text {
     text-align: center;
-    padding-bottom: 32px;
 }
 /* #endregion */
 
 /* #region Portfolio section */
 
 
-.portfolio-container {
+.portfolio-section {
     padding-top: 120px;
     padding-bottom: 120px;
 }
 
 .portfolio-section h2 {
-    padding-bottom: 72px;
+    margin-bottom: 72px;
 }
 
 .portfolio-list {
-    display: inline-flex;
+    display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     column-gap: 24px;
@@ -293,18 +310,34 @@ address {
 }
 
 .portfolio-list-item {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     width: calc((100% - 48px) / 3);
     background: var(--white);
 }
 
+.portfolio-list-item img {
+    border-radius: 0px 0px 4px 4px;
+}
+
+.app-card {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
+
 .portfolio-section h3 {
     text-align: left;
-    padding: 32px 0 16px 8px;
+    margin-bottom: 8px;
     margin: 0 auto;
 }
 
 .portfolio-section p {
-    padding: 0 0 32px 8px;
+    text-align: left;
     margin: 0 auto;
 }
 /* #endregion */
@@ -312,17 +345,19 @@ address {
 /* #region Footer styles */
 .section-footer {
     background: var(--navy-blue);
+    padding: 100px 0;
 }
 
 .footer-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    column-gap: 16x;
-    padding-top: 100px;
-    padding-bottom: 100px;
 }
 
+footer .logo {
+    display: inline-block; 
+    margin-bottom: 16px;
+}
 .logo-footer {
     color: var(--cloud);
 }
