--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,6 @@ a:focus {
     text-transform: uppercase;
 }
 
-
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -191,10 +190,9 @@ image {
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
-    padding: 0 0 48px 0;
     text-align: center;
     max-width: 496px;
-    margin: 0 auto;
+    margin-bottom: 48px;
 }
 
 .btn {
@@ -318,9 +316,6 @@ image {
 }
 
 .portfolio-list-item {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
     width: calc((100% - 48px) / 3);
     background: var(--white);
 }
@@ -331,9 +326,6 @@ image {
 }
 
 .app-card {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
@@ -360,16 +352,8 @@ image {
 
 }
 
+
 .logo-link-footer {
-    color: #4d5ae5;
-    font-family: 'Raleway', sans-serif;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    font-weight: bold;
-    text-decoration: none;
-    text-transform: uppercase;
-    display: inline-block;
     margin-bottom: 16px;
 }
 .logo-footer {
