--- a/css/styles.css
+++ b/css/styles.css
@@ -124,8 +124,11 @@ image {
 
 /* #region Header styles */
 .header {
-  background-color: var(--cl-light-blue);
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 
+    0px 1px 6px 0px #2E2F4214,
+    0px 1px 1px 0px #2E2F4229,
+    0px 2px 1px 0px #2E2F4214;
 }
 
 .header-container {
@@ -161,6 +164,7 @@ image {
 }
 
 .header-nav-link {
+  position: relative;
   display: inline-block;
   padding: 24px 0;
   color: var(--navy-blue);
@@ -168,11 +172,14 @@ image {
 }
 
 .header-nav-link.active::after {
+  position: absolute;
+  bottom: -1px;
+  left: 0;
   content: "";
   display: block;
   width: 100%;
   height: 4px;
-  border-radius: 4px;
+  border-radius: 2px;
   background-color: #404bbf;
 }
 
@@ -371,17 +378,51 @@ image {
   row-gap: 48px;
 }
 
+.portfolio-list-overlay {
+  position: relative;
+  overflow: hidden;
+}
+
 .portfolio-list-item {
+
+
   width: calc((100% - 48px) / 3);
   box-shadow: 0px 2px 1px 0px #2E2F4214,
     0px 1px 1px 0px #2E2F4229,
     0px 1px 6px 0px #2E2F4214;
-
 }
 
 .portfolio-list-item img {
   display: block;
+
   border-radius: 0px 0px 4px 4px;
+  
+}
+
+.portfolio-img-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 300px;
+  padding: 40px 32px;
+  background: #3f51b5;
+
+  transform: translatey(100%);
+  transition: transform 250ms ease-in-out;
+
+
+
+
+  letter-spacing: 0.02em;
+
+  /* CLOUD */
+  color: #F4F4FD;
+
+
+}
+
+.portfolio-list-overlay:hover .portfolio-img-overlay {
+  transform: translatey(0);
 }
 
 .app-card {
@@ -411,6 +452,13 @@ image {
 }
 
 .footer-container {
+  display: flex;
+  align-items: baseline;
+
+}
+
+.footer-container-logo {
+  margin-right: 120px;
 }
 
 .logo-link-footer {
@@ -421,9 +469,47 @@ image {
 }
 
 .footer-text {
-  display: flex;
+
   color: var(--cloud);
   letter-spacing: 0.02em;
   max-width: 264px;
+}
+
+.footer-social {
+  max-width: 208px;
+}
+
+.social-text {
+  font-weight: 500;
+}
+
+.footer-socials-list {
+  max-width: 208px;
+  margin-top: 16px;
+}
+
+.footer-socials-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.footer-socials-background {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.socials-icons {
+  display: block;
+  color: #F4F4FD;
+
+  font-size: 16px;
 }
 /* #endregion */
