--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ a {
 
 a:hover,
 a:focus {
-  color: #404bbf;
+  color: var(--ocean);
 }
 
 .logo {
@@ -125,10 +125,8 @@ image {
 /* #region Header styles */
 .header {
   border-bottom: 1px solid #e7e9fc;
-  box-shadow: 
-    0px 1px 6px 0px #2E2F4214,
-    0px 1px 1px 0px #2E2F4229,
-    0px 2px 1px 0px #2E2F4214;
+  box-shadow: 0px 1px 6px 0px #2e2f4214, 0px 1px 1px 0px #2e2f4229,
+    0px 2px 1px 0px #2e2f4214;
 }
 
 .header-container {
@@ -167,8 +165,9 @@ image {
   position: relative;
   display: inline-block;
   padding: 24px 0;
-  color: var(--navy-blue);
+  color: var(--ocean);
   font-weight: 500;
+  transition: color var(--transition-hover-focus);
 }
 
 .header-nav-link.active::after {
@@ -180,7 +179,7 @@ image {
   width: 100%;
   height: 4px;
   border-radius: 2px;
-  background-color: #404bbf;
+  background-color: var(--ocean);
 }
 
 .header-address-link {
@@ -188,8 +187,8 @@ image {
   padding: 24px 0;
   color: var(--slate);
   font-weight: 400;
+  transition: color var(--transition-hover-focus);
 }
-
 /* #endregion */
 
 /* #region Hero */
@@ -204,11 +203,16 @@ image {
   background: var(--navy-blue);
   padding: 188px 0;
   margin: 0 auto;
-  background-image: linear-gradient(#2e2f42b2, #2e2f42b2),
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
     url(../images/hero/people-office.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero h1 {
@@ -236,6 +240,7 @@ image {
   padding: 16px 32px;
   border-radius: 4px;
   border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn:hover,
@@ -266,13 +271,12 @@ image {
 .icon-principles {
   padding: 20px 100px;
   margin-bottom: 8px;
-
   display: flex;
   align-items: center;
   justify-content: center;
   height: 112px;
   background-color: var(--cloud);
-  border: 1px solid #8E8F99
+  border: 1px solid #8e8f99;
 }
 
 .section-list-item h3 {
@@ -310,9 +314,8 @@ image {
   width: calc((100% - 72px) / 4);
   background: var(--white);
   border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 2px 1px 0px #2e2f4214, 
-  0px 1px 1px 0px #2e2f4229,
-  0px 1px 6px 0px #2e2f4214;
+  box-shadow: 0px 2px 1px 0px #2e2f4214, 0px 1px 1px 0px #2e2f4229,
+    0px 1px 6px 0px #2e2f4214;
 }
 
 .team-list-item img {
@@ -321,7 +324,6 @@ image {
 
 .team-card {
   padding: 32px 0;
-  
 }
 
 .team-section h3 {
@@ -347,8 +349,19 @@ image {
   margin-top: 8px;
 }
 
-.socials-background:hover {
-  background-color: #31d0aa;
+.icon-team-link:hover,
+.icon-team-lin:focus {
+  background-color: #404bbf;
+}
+
+.icon-team-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
 }
 
 .section-socials-list {
@@ -356,6 +369,10 @@ image {
   gap: 24px;
   justify-content: center;
   align-items: center;
+}
+
+.socials-icons {
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* #endregion */
 
@@ -384,19 +401,16 @@ image {
 }
 
 .portfolio-list-item {
-
-
   width: calc((100% - 48px) / 3);
-  box-shadow: 0px 2px 1px 0px #2E2F4214,
-    0px 1px 1px 0px #2E2F4229,
-    0px 1px 6px 0px #2E2F4214;
+  box-shadow: 0px 2px 1px 0px #2e2f4214, 0px 1px 1px 0px #2e2f4229,
+    0px 1px 6px 0px #2e2f4214;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .portfolio-list-item img {
   display: block;
 
   border-radius: 0px 0px 4px 4px;
-  
 }
 
 .portfolio-img-overlay {
@@ -406,19 +420,10 @@ image {
   height: 300px;
   padding: 40px 32px;
   background: #3f51b5;
-
+  background-color: #4d5ae5;
   transform: translatey(100%);
-  transition: transform 250ms ease-in-out;
-
-
-
-
-  letter-spacing: 0.02em;
-
-  /* CLOUD */
-  color: #F4F4FD;
-
-
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #f4f4fd;
 }
 
 .portfolio-list-overlay:hover .portfolio-img-overlay {
@@ -454,7 +459,6 @@ image {
 .footer-container {
   display: flex;
   align-items: baseline;
-
 }
 
 .footer-container-logo {
@@ -469,7 +473,6 @@ image {
 }
 
 .footer-text {
-
   color: var(--cloud);
   letter-spacing: 0.02em;
   max-width: 264px;
@@ -480,12 +483,13 @@ image {
 }
 
 .social-text {
+  color: #FFFFFF;
   font-weight: 500;
+  margin-bottom: 16px;
 }
 
 .footer-socials-list {
   max-width: 208px;
-  margin-top: 16px;
 }
 
 .footer-socials-list {
@@ -500,16 +504,31 @@ image {
   height: 40px;
   border-radius: 50%;
   background-color: #4d5ae5;
-  
+
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+.footer-list-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.footer-list-link:hover,
+.footer-list-link:focus {
+  background-color: #31d0aa;
+}
+
 .socials-icons {
   display: block;
-  color: #F4F4FD;
-
+  color: #f4f4fd;
   font-size: 16px;
 }
 /* #endregion */
