--- a/css/styles.css
+++ b/css/styles.css
@@ -167,7 +167,7 @@ image {
   padding: 24px 0;
   color: var(--ocean);
   font-weight: 500;
-  transition: color var(--transition-hover-focus);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-nav-link.active::after {
@@ -187,7 +187,7 @@ image {
   padding: 24px 0;
   color: var(--slate);
   font-weight: 400;
-  transition: color var(--transition-hover-focus);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* #endregion */
 
@@ -277,6 +277,7 @@ image {
   height: 112px;
   background-color: var(--cloud);
   border: 1px solid #8e8f99;
+  border-radius: 4px;
 }
 
 .section-list-item h3 {
@@ -350,7 +351,7 @@ image {
 }
 
 .icon-team-link:hover,
-.icon-team-lin:focus {
+.icon-team-link:focus {
   background-color: #404bbf;
 }
 
@@ -362,6 +363,7 @@ image {
   border-radius: 50%;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-socials-list {
@@ -518,7 +520,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: flex;
   align-items: center;
   justify-content: center;
-
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-list-link:hover,
