--- a/css/styles.css
+++ b/css/styles.css
@@ -165,13 +165,18 @@ image {
   position: relative;
   display: inline-block;
   padding: 24px 0;
-  color: var(--ocean);
+  
   font-weight: 500;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.active {
+  color: var(--ocean);
+}
+
 .header-nav-link.active::after {
   position: absolute;
+
   bottom: -1px;
   left: 0;
   content: "";
@@ -419,7 +424,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: absolute;
   top: 0;
   left: 0;
-  height: 300px;
+  height: 100%;
   padding: 40px 32px;
   background: #3f51b5;
   background-color: #4d5ae5;
