--- a/css/styles.css
+++ b/css/styles.css
@@ -109,6 +109,7 @@ button {
   font-family: inherit;
   background-color: transparent;
   border: 1px solid transparent;
+  cursor: pointer;
 }
 
 address {
@@ -619,10 +620,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 /* #endregion */
 
 /* #region modal-overlay section */
-
-
-
-
 .modal-overlay {
   background-color: var(--navy-blue-modal);
   position: fixed;
@@ -671,6 +668,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   align-items: center;
   width: 24px;
   height: 24px;
+  padding: 0;
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   color: var(--navy-blue);
@@ -696,9 +694,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-weight: 500;
   letter-spacing: 0.02em;
   color: var(--navy-blue);
-}
-
-.modal-form {
 }
 
 .modal-form-field-box {
@@ -738,7 +733,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
   background-color: transparent;
-  transition: border-color var(--navy-blue-modal);
+  transition: border-color var(--transition-hover-focus);
 }
 
 .modal-form-field:hover,
@@ -756,6 +751,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 8px 16px;
   resize: none;
   overflow-y: auto;
+  transition: var(--transition-hover-focus);
 }
 
 .modal-form-textarea::placeholder {
@@ -826,7 +822,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--iris);
 }
 
-.modal-form-btn {
+.modal-btn {
   display: block;
   padding: 16px 32px;
   margin: 0 auto;
@@ -838,7 +834,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color var(--transition-hover-focus);
 }
 
-.modal-form-btn:hover {
+.modal-btn:hover {
   background-color: var(--ocean);
 }
 
