--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+.hide {
+  display: none;
+}
+
+
 /* #region Base styles */
 :root {
   --iris: #4d5ae5;
@@ -98,10 +103,34 @@ a:focus {
   overflow: hidden;
 }
 
+
+section {
+  padding: 96px 0;
+}
+
+@media only screen and (min-width: 768px) {
+  section {
+    padding: 120px 0;
+  }
+}
+
 .container {
-  max-width: 1158px;
-  padding: 0 15px;
+  max-width: 320px;
   margin: 0 auto;
+  padding: 0 16px;
+}
+
+@media only screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+    padding: 0 15px;
+  }
 }
 
 button {
@@ -144,6 +173,12 @@ image {
   align-items: center;
 }
 
+@media only screen and (max-width: 767px) {
+  .header-nav {
+    padding: 16px 0;
+  }
+}
+
 .logo-link-header {
   padding: 24px 0;
   margin-right: 76px;
@@ -153,23 +188,38 @@ image {
   color: var(--navy-blue);
 }
 
+@media only screen and (min-width: 768px) {
+  .logo-header {
+    margin-right: 76px;
+  }
+}
+
 .header-nav-list,
 .header-address-list {
   display: flex;
+  flex-direction: row;
   gap: 40px;
   list-style: none;
 }
 
+@media screen and (min-width: 768px) {
+  .header-adress-list {
+    flex-direction: column;
+    gap: 12px;
+  }
+}
+
 .header-address {
   display: flex;
+  align-items: center;
 }
 
 .header-nav-link {
   position: relative;
   display: inline-block;
   padding: 24px 0;
-
   font-weight: 500;
+  line-height: 1.5;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -179,7 +229,6 @@ image {
 
 .header-nav-link.active::after {
   position: absolute;
-
   bottom: -1px;
   left: 0;
   content: "";
@@ -194,33 +243,125 @@ image {
   display: inline-block;
   padding: 24px 0;
   color: var(--slate);
+  font-size: 12px;
   font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-adress-link:hover,
+.header-adress-link:focus {
+  color: var(--cl-ocean);
+}
+
+@media only screen and (min-width: 1158px) {
+  .header-adress-link {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
+}
+
+.header-burger-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+  color: var(--cl-navy-blue);
+  background-color: transparent;
+  transition: color var(--transition-hover-focus);
+}
+
+.header-burger-btn:hover,
+.header-burger-btn:focus {
+  color: var(--cl-ocean);
+}
+
+@media only screen and (min-width: 768px) {
+  .header-burger-btn {
+    display: none;
+  }
+}
+
+.header-burger-icon {
+  fill: currentColor;
 }
 /* #endregion */
 
 /* #region Hero */
 .hero-container {
   display: flex;
-  justify-content: center;
+  align-items: center;
   flex-direction: column;
+  gap: 72px;
 }
 
-.hero {
-  max-width: 1440px;
+@media only screen and (min-width: 768px) {
+  .hero-container {
+    gap: 64px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .hero-container {
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+    align-items: center;
+  }
+}
+v .hero {
+  max-width: 320px;
   background: var(--navy-blue);
-  padding: 188px 0;
+  padding: 72px 0;
   margin: 0 auto;
-  background-image: linear-gradient(
-      to bottom,
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
-    url(../images/hero/people-office.jpg);
+  background-image: linear-gradient(to bottom, var(--grey), var(--grey)),
+    url(../images/hero/people-office-mob@1x.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media (min-resolution: 192dpi) {
+  .hero {
+    background-image: linear-gradient(to bottom, var(--grey), var(--grey)),
+      url(../images/hero/people-office-mob@2x.jpg);
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .hero {
+    max-width: 768px;
+    padding: 112px 0;
+    background-image: linear-gradient(to bottom, var(--grey), var(--grey)),
+      url(../images/hero/people-office-tab@1x.jpg);
+  }
+}
+
+@media only screen and (min-width: 768px) and (min-resolution: 192dpi) {
+  .hero {
+    background-image: linear-gradient(to bottom, var(--grey), var(--grey)),
+      url(../images/hero/people-office-tab@2x.jpg);
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .hero {
+    max-width: 1440px;
+    padding: 188px 0;
+    background-image: linear-gradient(to bottom, var(--grey), var(--grey)),
+      url(../images/hero/people-office-desk@1x.jpg);
+  }
+}
+
+@media only screen and (min-width: 1158px) and (min-resolution: 192dpi) {
+  .hero {
+    background-image: linear-gradient(to bottom, var(--grey), var(--grey)),
+      url(../images/hero/people-office-desk@2x.jpg);
+  }
 }
 
 .hero h1 {
@@ -231,6 +372,15 @@ image {
   text-align: center;
   max-width: 496px;
   margin-bottom: 48px;
+}
+
+@media only screen and (min-width: 768px) {
+  .hero h1 {
+    max-width: 496px;
+
+    font-size: 56px;
+    line-height: 1.07;
+  }
 }
 
 .btn {
@@ -267,29 +417,81 @@ image {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 24px;
+  gap: 72px;
+}
+
+@media only screen and (min-width: 768px) {
+  .section-list {
+    flex-direction: row;
+    column-gap: 24px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .section-list {
+    justify-content: space-between;
+    gap: 24px;
+  }
 }
 
 .section-list-item {
-  width: calc((100% - 72px) / 4);
+  width: calc((100% - 72px) / 1);
   display: flex;
   flex-direction: column;
 }
 
+@media only screen and (min-width: 768px) {
+  .section-list-item {
+    width: calc((100% - 24px) / 2);
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .section-list-item {
+    width: calc((100% - 72px) / 4);
+  }
+}
+
 .icon-principles {
-  padding: 20px 100px;
-  margin-bottom: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 112px;
-  background-color: var(--cloud);
-  border: 1px solid #8e8f99;
-  border-radius: 4px;
+  display: none;
+}
+
+@media screen and (min-width: 1158px) {
+  .icon-principles {
+    padding: 20px 100px;
+    margin-bottom: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: var(--cloud);
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+  }
 }
 
 .section-list-item h3 {
   margin-bottom: 8px;
+}
+
+@media only screen and (min-width: 768px) {
+  .section-list-item h3 {
+    text-align: start;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .section-list-item h3 {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+  }
+}
+
+@media screen and (max-width: 1157px) {
+  .section-list-item-text {
+    font-weight: 500;
+  }
 }
 
 .principles-section .section-title {
@@ -311,21 +513,56 @@ image {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 24px;
+  gap: 72px;
+  padding: 0 12px;
 }
+
+@media only screen and (min-width: 768px) {
+  .team-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 64px 24px;
+    padding: 0 92px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .team-list {
+    padding: 0 0;
+    margin: 0 auto;
+  }
+}
+
 
 .team-section h2 {
   text-align: center;
   margin-bottom: 72px;
 }
 
+
 .team-list-item {
-  width: calc((100% - 72px) / 4);
+  display: flex;
+  flex-direction: column;
   background: var(--white);
   border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 2px 1px 0px #2e2f4214, 0px 1px 1px 0px #2e2f4229,
+  box-shadow: 0px 2px 1px 0px #2e2f4214, 
+    0px 1px 1px 0px #2e2f4229,
     0px 1px 6px 0px #2e2f4214;
 }
+
+@media only screen and (min-width: 768px) {
+  .team-list-item {
+    width: calc((100% - 24px) / 2);
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .team-list-item {
+    width: calc((100% - 72px) / 4);
+  }
+}
+
 
 .team-list-item img {
   display: block;
@@ -397,25 +634,62 @@ image {
   margin-bottom: 72px;
 }
 
+
+
 .portfolio-list {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  column-gap: 24px;
-  row-gap: 48px;
+  flex-direction: column;
+  gap: 48px;
+}
+
+@media only screen and (min-width: 768px) {
+  .portfolio-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .portfolio-list {
+    gap: 48px 24px;
+  }
 }
 
 .portfolio-list-overlay {
+  height: 280px;
   position: relative;
   overflow: hidden;
 }
 
+@media only screen and (min-width: 768px) {
+  .portfolio-list-overlay {
+    height: 300px;
+  }
+}
+
+
 .portfolio-list-item {
-  width: calc((100% - 48px) / 3);
-  box-shadow: 0px 2px 1px 0px #2e2f4214, 0px 1px 1px 0px #2e2f4229,
+  cursor: pointer;
+  box-shadow: 0px 2px 1px 0px #2e2f4214, 
+    0px 1px 1px 0px #2e2f4229,
     0px 1px 6px 0px #2e2f4214;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow var(--transition-hover-focus);
 }
+
+@media only screen and (min-width: 768px) {
+  .portfolio-list-item {
+    width: calc((100% - 24px) / 2);
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .portfolio-list-item {
+    width: calc((100% - 48px) / 3);
+  }
+}
+
 
 .portfolio-list-item img {
   display: block;
@@ -448,7 +722,7 @@ image {
   border-color: #e7e9fc;
 }
 
-.portfolio-title h3 {
+.portfolio-section h3 {
   text-align: left;
   margin-bottom: 8px;
 }
@@ -462,21 +736,58 @@ image {
 /* #region Footer styles */
 
 .section-footer {
-  background: var(--navy-blue);
+  background-color: var(--navy-blue);
   padding: 100px 0;
 }
 
 .footer-container {
+  background-color: var(--navy-blue);
+  padding: 100px 0;
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  align-items: center;
+  gap: 72px;
 }
 
-.footer-container-logo {
-  margin-right: 120px;
+@media only screen and (min-width: 768px) {
+  .footer-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: baseline;
+    gap: 72px 24px;
+  }
 }
 
-.logo-link-footer {
-  margin-bottom: 16px;
+@media only screen and (min-width: 768px) and (max-width: 1157px) {
+  .footer-container {
+    padding: 0 108px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .footer-container {
+    flex-wrap: nowrap;
+    gap: 0;
+  }
+}
+
+.footer-box {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: center;
+}
+
+@media only screen and (min-width: 1158px) {
+  .footer-container-logo {
+    margin-right: 120px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .logo-link-footer {
+    align-self: start;
+  }
 }
 .logo-footer {
   color: var(--cloud);
@@ -484,8 +795,12 @@ image {
 
 .footer-text {
   color: var(--cloud);
-  letter-spacing: 0.02em;
-  max-width: 264px;
+}
+
+@media only screen and (min-width: 1158px) {
+  .footer-text {
+    width: 264px;
+  }
 }
 
 .footer-social {
@@ -493,10 +808,25 @@ image {
   margin-right: 80px;
 }
 
+.footer-social {
+  align-items: center;
+}
+
+@media only screen and (min-width: 1158px) {
+  .footer-social {
+    margin-right: 80px;
+  }
+}
+
 .social-text {
-  color: #ffffff;
   font-weight: 500;
-  margin-bottom: 16px;
+  color: var(--white);
+}
+
+@media only screen and (min-width: 768px) {
+  .social-text {
+    align-self: start;
+  }
 }
 
 .footer-socials-list {
@@ -545,16 +875,30 @@ image {
 
 .footer-form {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: inherit;
   max-width: 453px;
-  height: 60px;
-  gap: 24px;
+  gap: 16px;
   border-radius: 4px 0px 0px 0px;
   border: 1px solid transparent;
   color: #ffffff;
 }
+
+@media screen and (min-width: 768px) {
+  .footer-form {
+    flex-direction: row;
+    gap: 24px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .footer-form {
+    gap: 24px;
+  }
+}
+
 
 .subscribe-input {
   font-family: "Roboto";
@@ -606,7 +950,84 @@ image {
   fill: white;
   margin-left: 16px;
 }
+/* #endregion */
 
+/* #region Mobile menu */
+.mobile-menu {
+  background-color: var(--cl-white);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  opacity: 0;
+  transition: opacity var(--transition-hover-focus),
+    visibility var(--transition-hover-focus);
+}
+
+.mobile-menu.is-open {
+  opacity: 1;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+
+.mobile-menu-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  position: relative;
+  padding: 72px 16px 40px;
+}
+
+.mobile-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.mobile-menu-link {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: var(--cl-navy-blue);
+}
+
+.mobile-menu-link.active {
+  color: var(--cl-ocean);
+}
+
+.mobile-menu-contacts {
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
+}
+
+.mobile-menu-adress-list {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.mobile-menu-adress-link {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: rgb(var(--cl-slate));
+  transition: color var(--transition-hover-focus);
+}
+
+.mobile-menu-adress-link:hover,
+.mobile-menu-adress-link:focus {
+  color: var(--cl-iris);
+}
 /* #endregion */
 
 /* #region modal-overlay section */
@@ -637,16 +1058,28 @@ image {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 408px;
-  min-height: 584px;
+  width: 288px;
+  max-height: clamp(calc(100% - 17px), calc(100% - 17px), 623px);
   overflow-y: auto;
   border-radius: 4px;
-  padding: 72px 24px 24px;
-  background-color: var(--dairy);
+  padding: 72px 16px 24px;
   background-color: var(--dairy);
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
   transition: transform var(--transition-hover-focus);
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 408px;
+    min-height: 584px;
+    padding: 72px 24px 24px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .modal {
+  }
 }
 
 .modal-close-btn {
@@ -682,7 +1115,9 @@ image {
 .modal-title {
   margin-bottom: 16px;
   text-align: center;
+  font-size: 16px;
   font-weight: 500;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--navy-blue);
 }
@@ -772,7 +1207,7 @@ image {
 }
 
 .standard-checkbox:checked + .custom-checkbox .custom-checkbox-box {
-  background-color: var(--ocean);
+  background-color: rgb(var(--cl-ocean));
   border: none;
   fill: var(--cloud);
 }
@@ -782,6 +1217,9 @@ image {
 }
 
 .custom-checkbox {
+  display: flex;
+  align-items: center;
+  gap: 8px;
   cursor: pointer;
   user-select: none;
   font-size: 12px;
@@ -791,6 +1229,8 @@ image {
 }
 
 .custom-checkbox-box {
+  flex-shrink: 0;
+
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -820,7 +1260,7 @@ image {
   cursor: pointer;
 }
 
-.modal-btn {
+.modal-form-btn {
   display: block;
   padding: 16px 32px;
   margin: 0 auto;
@@ -832,8 +1272,7 @@ image {
   transition: background-color var(--transition-hover-focus);
 }
 
-.modal-btn:hover {
+.modal-form-btn:hover {
   background-color: var(--ocean);
 }
-
 /* #endregion */
